# tats

./: .gitignore  stack-tats.cabal  tats.cabal
.stack-work/install/x86_64-osx/lts-5.16/7.10.3/flag-cache/: JuicyPixels-3.2.7-3a7e7c21ee56126ed699738ba025a498  MonadRandom-0.4.2.3-b56bf149617e7d6016c795270952d56b  RSA-2.2.0-af22172ffb1ba5eb82ae25a27aaf518e  SHA-1.6.4.2-b30162b0be82475de3407240a3c26263  StateVar-1.1.0.4-c870ecc28adfa9764b145a54f6a2c147  active-0.2.0.9-9c3d3fb478c1f3a574ad1ddc5dba213a  adjunctions-4.3-8377529281f011afc4d40d8185ec5da1  aeson-0.9.0.1-a2572023962ae7b1fabdbdd6b0d68164  ansi-terminal-0.6.2.3-7b40b18f4e53e6f53c2ffd807e929ca9  ansi-wl-pprint-0.6.7.3-c624a14e647c937768855ca360a122b5  asn1-encoding-0.9.3-38b5fdbdb7bdd612e34932ee6f0a8f0a  asn1-parse-0.9.4-bec6e02c4e82eb882fb039103c46c43b  asn1-types-0.3.2-ec0b7732b519d82e52a8a2efee67098b  async-2.1.0-033e4fae4da028fc2d6502bd36e5e5a1  attoparsec-0.13.0.2-221c21c30b1d97a8094ea1c0fb4be6cc  authenticate-oauth-1.5.1.1-e71d717f29f3f70856824467ce346b8b  base-orphans-0.5.4-43f3d27c7bf4b3afcb3d01a72ca02a01  base64-bytestring-1.0.0.1-76d93cc37cb76265172a708135c9653a  bifunctors-5.2-f2554f1b393b02295fc413768c8153a5  blaze-builder-0.4.0.2-3d55cdb9c31315a2ab5b8619fb60d7a4  byteable-0.1.1-bf870645be051d53f8c785389208c7cc  bytes-0.15.2-f1b9d4e75bb85aa2f63600b961081af3  case-insensitive-1.2.0.6-28001518960764881fec139deee922f6  cereal-0.5.1.0-f862e4f3fbf559b0a601e0ebdf6c54f6  circle-packing-0.1.0.5-eab3b3968f3f47dee8ccbd0c2db34cd9  colour-2.3.3-0c4e3735159b357562a94a22fd309019  (+94 more)
src/: Main.hs
(+123 files in other folders)
