name:                stack-tats
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/2016rshah/stack-tats#readme
license:             BSD3
license-file:        LICENSE
author:              Rushi Shah
maintainer:          2016rshah@gmail.com
copyright:           2016
category:            test
build-type:          Simple
cabal-version:       >=1.10

executable stack-tats
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Common
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , bytestring >= 0.10.4.0
                     , case-insensitive >= 1.1.0.3
                     , containers >= 0.5.5.1
                     , http-conduit >= 2.1.8
                     , lens -any
                     , network-uri >= 2.6.0.3
                     , text >= 1.1.0.0
                     , text >= 1.1.0.0
                     , twitter-conduit -any
                     , diagrams >= 1.3.0.0
                     , diagrams-svg >= 1.3.1
                     , diagrams-lib >= 1.3.1
